--- a/main.css
+++ b/main.css
@@ -14,39 +14,29 @@ body {
 }
 
 header {
-  margin-bottom: 60px;
-  background-color: rgba(0, 0, 0, 0.9);
-  overflow: hidden;
-  position: fixed;
-  top: 0;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.9));
 }
 
 header img {
   width: 25%;
   height: auto;
-  float: left;
-  position: relative;
-  margin: 10px 10px 10px 30px;
-  border-radius: 10px;
+  border-radius: 40px;
 }
 
-nav {
-  display: inline-block;
-  float: right;
-  margin-right: 60px;
-  margin-top: 80px;
+nav ul {
+  margin-top: 50px;
 }
 
 nav li {
   list-style: none;
   display: inline;
-  margin-right: 30px;
+  font-size: 120%;
+  color: white;
 }
 
 nav a {
   text-decoration: none;
-  font-size: 120%;
-  color: white;
+  color: white !important;
   padding: 8px;
   border-radius: 4px;
 }
@@ -54,19 +44,23 @@ nav a {
 nav a:hover {
   box-shadow: 2px 2px 2px red;
   background-color: white;
-  color: black;
+  color: black !important;
   border: 1px solid red;
   transition: all 0.3s;
 }
 
-section {
-  padding-top: 180px;
+.navbar {
+  margin-right: 60px !important;
+}
+
+.logo {
+  margin-left: 120px !important;
 }
 
 #home h1 {
   text-align: center;
-  margin-bottom: 20px;
-  margin-top: -20px;
+  margin-bottom: 60px;
+  margin-top: 250px;
   font-size: 200%;
   text-shadow: 3px 3px 4px red;
 }
@@ -75,16 +69,14 @@ section {
   display: inline-block;
   width: 55%;
   height: auto;
-  margin-bottom: 10px;
-  margin-left: 30px;
-  border-radius: 10px;
+  margin-bottom: 30px;
+  border-radius: 40px;
 }
 
 #home h2 {
   display: inline;
   float: right;
-  margin-right: 50px;
-  margin-top: 300px;
+  margin-top: 100px;
   font-size: 270%;
   text-shadow: 2px 2px 10px white;
 }
@@ -92,9 +84,9 @@ section {
 #chisiamo h1,
 #eventi h1,
 #foto h1,
-#contatti h1,
-#links_sponsors h1 {
+#contatti h1 {
   margin-bottom: 30px;
+  margin-top: 200px;
   font-size: 200%;
   text-shadow: 3px 3px 4px red;
   margin-left: 30px;
@@ -103,12 +95,10 @@ section {
 
 #chisiamo p {
   margin-bottom: 40px;
-  margin-left: 30px;
   line-height: 220%;
-  margin-right: 60px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6));
-  padding: 8px;
-  border-radius: 16px;
+  padding: 10px;
+  border-radius: 20px;
 }
 
 #chisiamo h2 {
@@ -125,28 +115,7 @@ section {
 
 #eventi img {
   display: inline-block;
-  margin-left: 30px;
   width: 40%;
-  height: auto;
-  margin-right: 100px;
-}
-
-#foto img {
-  width: 300px;
-  height: auto;
-  margin-left: 40px;
-  margin-bottom: 20px;
-  margin-right: 100px;
-}
-
-#foto img:hover {
-  box-shadow: 3px 3px 10px white;
-  transform: translateY(8px);
-}
-
-#foto img:target {
-  display: block;
-  width: 100%;
   height: auto;
 }
 
@@ -161,17 +130,12 @@ section {
 
 #contatti a {
   text-shadow: 3px 3px 6px red;
-}
-
-#links_sponsors a {
-  margin: 0px 12px 40px 30px;
+  color: white;
 }
 
 #links_sponsors img {
-  width: 20%;
+  width: 15%;
   height: auto;
-  margin-top: -20px;
-  margin-bottom: 10px;
 }
 
 .myLinks img {
@@ -193,6 +157,10 @@ section {
   font-size: small;
 }
 
+.sponsors img {
+  width: 60%;
+}
+
 .myLinks {
   background-color: black;
   border: 1px solid light gray;
@@ -202,97 +170,162 @@ section {
   filter: alpha(opacity=8);
   box-shadow: 10px 10px 30px 10px black;
   text-align: center;
-  max-width: 100px;
+/*  max-width: 100px;*/
   display: inline;
   padding: 5px 5px 2px 5px;
 }
 
 footer {
   display: inline-block;
-  margin-top: 69px;
+  margin-top: 39px;
   margin-bottom: 69px;
   margin-left: 30px;
 }
 
-@media screen and (max-width: 800px) {
-  nav {
-    margin-right: 80px;
-    margin-top: 20px;
-    float: left;
-  }
+.copy {
+  margin-top: 50px;
+}
 
-  nav li {
-    margin-right: -4px;
-    font-size: 12px;
-  }
+#links_sponsors h1 {
+  margin-top: 200px;
+  font-size: 200%;
+  text-shadow: 3px 3px 4px red;
+  margin-left: 30px;
+  padding: 4px;
+}
+
+.sponsors>h1 {
+  margin-top: 30px !important;
+}
+
+
+
+
+
+
+
+
+/*Extra small devices (portrait phones, less than 576px)*/
+
+@media (max-width: 575px) {
 
   #home h1 {
-    margin-bottom: 30px;
-    font-size: 19px;
-    margin-left: 30px;
-    display: inline-block;
+    margin-top: 150px !important;
   }
 
-  #home img {
-    display: block;
-    width: 80%;
-    height: auto;
+  .logo {
+    margin: 0 !important;
+    width: 30% !important;
   }
 
-  #home h2 {
-    margin-top: 30px;
-    margin-bottom: 25px;
-    font-size: 23px;
-    float: none;
-    display: inline-block;
-    margin-left: 30px;
-  }
-
-  #chisiamo h1 {
-    margin-top: 40px;
-  }
-
-  #foto img {
-    width: 80%;
+  #chisiamo h1,
+  #eventi h1,
+  #foto h1,
+  #contatti h1 {
+    margin-top: 160px !important;
   }
 
   #eventi img {
-    margin-right: 0px;
-    width: 69%;
-    margin-bottom: 69px;
+    width: 100% !important;
   }
 
-  #links_sponsors h1 {
-    margin-top: 6px
+  #contatti p {
+    font-size: 80% !important;
   }
 
   #links_sponsors img {
-  	width: 19%;
+    width: 15% !important;
   }
+
+  #links_sponsors h1 {
+    margin-top: 100px !important;
+  }
+
 }
 
-@media screen and (max-width: 380px) {
 
-  header img {
-    width: 85%;
-  }
 
-  nav {
-    margin-top: 0px;
-  }
 
-  nav li {
-    padding-right: 16px;
+
+
+/*Small devices (landscape phones, less than 768px)*/
+
+@media (max-width: 767px) {
+  ...
+}
+
+
+
+
+
+
+
+
+/*Medium devices (tablets, less than 992px)*/
+
+@media (max-width: 991px) {
+  nav a {
+    font-size: 100%;
   }
 
   #home h1 {
-    margin-bottom: 30px;
-    font-size: 36px;
-    margin-top: 100px;
+    margin-top: 300px;
+    font-size: 150%;
+  }
+
+#home img {
+    width: 80%;
+    height: auto;
+    margin: 0 auto;
   }
 
   #home h2 {
-    font-size: 29px;
-    margin-right: 30px;
+    text-align: center;
+    margin-top: 60px;
+  }
+
+  #chisiamo h1,
+  #eventi h1,
+  #foto h1,
+  #contatti h1 {
+    margin-top: 300px;
+  }
+
+  #eventi img {
+    width: 50%;
+  }
+
+  footer {
+    margin-top: 100px;
+  }
+
+  .logo {
+    width: 70% !important;
+    margin: 0 auto !important;
+  }
+
+  .navbar {
+    margin: 0 auto !important;
+  }
+
+  nav ul li {
+    margin-top: -20px;
+  }
+
+  #links_sponsors img {
+    width: 20%;
   }
 }
+
+
+
+
+
+
+
+
+/*Large devices (desktops, less than 1200px)*/
+
+@media (max-width: 1199px) {
+  ...
+} 
